--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -87,6 +87,9 @@
             'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
             'Noto Color Emoji';
     }
+    button {
+       cursor: pointer;
+    }
 }
 
 :root {
